# ralaver

./: .env.example  .env.test  .gitignore  Cargo.toml  Readme.md  dev.app.Dockerfile  dev.docker-compose.yaml  dev.tools.Dockerfile  package-lock.json  package.json
frontend/admin-front-template-1/: readme.md
frontend/admin-front-template-1/public/: create-edit.html  index.html  list.html  login.html  register.html  reset-password-confirm.html  reset-password.html
migrations/2025-02-12-105937_create_users/: up.sql
resources/components/alert/: alert.css  alert.html
resources/components/b-checkbox/: b-checkbox.css
resources/components/b-radio/: b-radio.html
resources/components/btn/: btn.css
resources/components/c-checkbox/: c-checkbox.html
resources/components/c-radio/: c-radio.css
resources/components/color-checkbox/: color-checkbox.html
resources/components/d-block/: d-block.css
resources/components/d-inline-block/: d-inline-block.css
resources/components/dark-mode/: dark-mode.css
resources/components/dropdown/: dropdown.html
resources/components/input/: input.html
resources/components/login/: login.css
resources/components/menu/: menu.css
resources/components/pagination/: pagination.css
resources/components/radio/: radio.css
resources/components/sidebar/: sidebar.html
resources/components/table/: table.css
resources/components/tabs/: tabs--menu-mod-md.css  tabs--menu-mod-xxl.css  tabs--menu-mod.css  tabs.css
resources/components/tag/: tag.html
resources/css/components/: accordion.css  b-radio.css  breadcrumb.css  c-checkbox.css  collapse.css  color-checkbox.css  d-flex.css  d-none.css  dark-mode.css  dropdown.css  field.css  input.css  layout.css  list-page.css  login.css  modal.css  pagination.css  s-collapse.css  search-group.css  sidebar.css  tabs--menu-mod-sm.css  tabs--menu-mod-xl.css  tabs--menu-mod-xs.css
resources/handlebars/components/: admin-dark-mode-btn.hbs  admin-dark-mode-inputs.hbs  alert.hbs  alerts.hbs  auth-layout.hbs  b-tabs.hbs  breadcrumb.hbs  checkbox.hbs  collapse.hbs  dark-mode.hbs  error-content.hbs  field.hbs  heading.hbs  layout.hbs  login.hbs  modal.hbs  pagination.hbs  radio.hbs  search-group.hbs  sidebar.hbs  tabs.hbs  tag.hbs  tags.hbs
resources/handlebars/pages/: auth.hbs
resources/js/components/: dark-mode.js  submit-on-change.js
resources/lang/: en.json  ru.json
resources/lang/en/: alert.json  app.json  auth.json  error.json  layout.json  mail.json  page.json  passwords.json  permission.json  unit.json  validation.json
resources/lang/ru/: alert.json  app.json  auth.json  error.json  layout.json  mail.json  page.json  pagination.json  passwords.json  permission.json  unit.json  validation.json
resources/pages/auth/: forgot-password-confirm.html  forgot-password.html  login.html  register.html
resources/pages/home/: index.html
src/: config.rs  connections.rs  db_connection.rs  errors.rs  helpers.rs  main.rs  migrations.rs  redis_connection.rs  schema.rs  services.rs
src/adapters/: garde.rs  mod.rs
src/app/: mod.rs
src/app/adapters/: mod.rs
src/app/connections/: diesel_mysql.rs  (+7 more)
src/config/: app.rs
src/core/: template.rs
src/libs/: mod.rs  serde.rs
src/migrations/: files.rs  mod.rs  roles.rs  roles_permissions.rs  users.rs  users_roles.rs
src/routes/: api.rs  css.rs  js.rs  mod.rs  static_files.rs  svg.rs  web.rs
storage/: .gitignore
(+191 files in other folders)
