[package]
name = "rust-admin-panel"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
actix-web = "4"
diesel = { version = "2.2.7", features = ["mysql", "r2d2", "sqlite"] }
diesel_migrations = "2.2.0"
dotenv = "0.15.0"
r2d2 = "0.8.10"
serde_json = "1.0.138"
serde = { version = "1.0.217", features = ["derive"] }
serde_derive = "1.0.218"
handlebars = "6.3.1"
actix-utils = "3.0.1"
http = "0.2.12"
flatten_json = "0.1.0"
accept-language = "3.1.0"
lettre = "0.11.15"
rand = "0.9.0"
redis = { version = "0.31.0", features = ["r2d2"] }
strum = "0.27.1"
strum_macros = "0.27.1"
log = "0.4.27"
env_logger = "0.11.8"
serde_bare = "0.5.0"
libc = "1.0.0-alpha.1"
openssl = "0.10.72"
base64-stream = "4.0.0"
sha2 = "0.10.8"
hex = "0.4.3"
sodoken = "0.1.0"
mime = "0.3.17"
serde_urlencoded = "0.7.1"
url = "2.5.4"
serde_with = "3.12.0"
tokio = { version = "1.45.0", features = ["full"] }
r2d2_mysql = "25.0.0"
