[package]
name = "rust-admin-panel"
version = "0.1.0"
edition = "2021"
license = "MIT"
default-run = "rust-admin-panel"

[dependencies]
dotenv = "0.15.0"
actix-utils = "3.0.1"
flatten_json = "0.1.0"
accept-language = "3.1.0"
strum = "0.27.1"
strum_macros = "0.27.1"
log = "0.4.27"
env_logger = "0.11.8"
serde_bare = "0.5.0"
libc = "1.0.0-alpha.1"
base64-stream = "4.0.0"
sha2 = "0.10.8"
hex = "0.4.3"
sodoken = "0.1.0"
mime = "0.3.17"
serde_urlencoded = "0.7.1"
url = "2.5.4"
chrono = { version = "0.4.41", features = ["serde"] }
serde_qs = "0.15.0"
actix-http = "3.11.0"
bytes = "1.10.1"
encoding_rs = "0.8.35"
futures-core = "0.3.31"
futures-util = "0.3.31"
actix-rt = "2.10.0"
actix-multipart = "0.7.2"
mime2ext = "0.1.54"
mime_guess = "2.0.5"
mysql = { version = "26.0.0", features = ["chrono"] }
r2d2 = "0.8.10"
actix-files = "0.6.6"
ureq = "3.0.12"
cfg-if = "1.0.1"
tokio = { version = "1.45.1", features = ["full"] }
openssl = "0.10.73"
redis = { version = "0.32.2", features = ["r2d2"] }
rand = "0.9.1"
lettre = "0.11.17"
handlebars = "6.3.2"
serde_derive = "1.0.219"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
actix-web = "4.11.0"
image = "0.25.6"
kv = "0.24.0"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"
